Maintenance devoirs OK

--- a/app/Resources/views/cours/adminDevoir.html.twig
+++ b/app/Resources/views/cours/adminDevoir.html.twig
@@ -124,5 +124,12 @@
             </div>
 
         </div>
+        <hr class="hrCourseElem" />
+        <div class="row">
+            <div class="LabelAdmin col-sm-3">Commentaire "copie rendue"</div>
+            <div class="col-sm-9  col-xs-12 noPadding">
+                <textarea data-champName="commentaireCopieRendue" id="zone_{{ zoneId }}_lien_{{ devoir.id }}_commCopRend" class="simpleEditor editor champAdmin" readonly>{{ devoir.commentaireCopieRendue }}</textarea>
+            </div>
+        </div>
     </div>
 </li>
