Maintenance devoirs OK

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -153,6 +153,7 @@
                                     <li><a target="_blank" href="{{ path('sonata_admin_dashboard') }}">BackOffice</a></li>
                                     <li><a href="{{ path('emailing') }}">Emailing</a></li>
                                     <li><a href="{{ path('stats') }}">Statistiques</a></li>
+                                    <li><a href="{{ path('usersManag') }}">Gestion des utilisateurs</a></li>
                                 {% endif %}
                                 {% block vueAdmin %}{% endblock %}
                                 <li><a href="{{ path('calendrier') }}">Mon calendrier</a></li>
