--- a/app/Resources/views/ressources/oneDevoirEns.html.twig
+++ b/app/Resources/views/ressources/oneDevoirEns.html.twig
@@ -139,7 +139,7 @@
                                 currentUrl: window.location.pathname
                             },
                             success: function (data) {
-                                //window.location.href = window.location.href;
+                                window.location.href = window.location.href;
                             },
                             error: function(xhr, status, error) {
                             }
