--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -945,6 +945,106 @@ ul.list-default>li.studitWhiteFC:before{
     display: none;
 }
 
+/* Fiche user */
+[data-filtreIsInscrit="1"]{
+    background-color: #00a65a;
+}
+[data-filtreHasAccess="1"]{
+    background-color: #b2e8c9;
+}
+.cohsItems{
+    margin-right: 20px;
+}
+.itemsTab{
+    display: flex;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    flex-direction: row;
+    -webkit-flex-direction: row;
+    -webkit-box-orient: horizontal;
+}
+.titleItems{
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 600;
+}
+.interact-items{
+    padding: 5px;
+    border: 1px solid #aaa;
+    background: #eee;
+    border-radius: 3px;
+    vertical-align: top;
+}
+.filtred_item{
+    border-radius: 10px;
+    padding: 5px;
+    border: 2px solid #eee;
+    cursor: pointer;
+    margin-bottom: 2px;
+    display: flex;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    flex-direction: row;
+    -webkit-flex-direction: row;
+    -webkit-box-orient: horizontal;
+    justify-content: space-between;
+    -webkit-justify-content: space-between;
+}
+.surligne{
+    border-color: red;
+}
+.menuActionInscrUser{
+    position: fixed;
+    left: 20px;
+    top: 370px;
+    z-index: 10;
+    display: none;
+}
+.btnMenuActionInscrUser{
+    height: 45px;
+    width: 150px;
+    background-color: #456d94;
+    color: #fff;
+    line-height: 50px;
+    text-align: left;
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
+    z-index: 99;
+    padding: 10px;
+    display: flex;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    flex-direction: row;
+    -webkit-flex-direction: row;
+    -webkit-box-orient: horizontal;
+    align-items: center;
+    -webkit-align-items: center;
+    margin-bottom: 5px;
+}
+.btnMenuActionInscrUser:hover{
+    background-color: #5087b9;
+}
+.btnAlert{
+    background-color: #e89500;
+}
+.btnAlert:hover{
+    background-color: #f7a100;
+}
+.btnMenuActionInscrUser .fa{
+    font-size: 22px;
+    margin-right: 10px;
+}
+
+.menuOneItem{
+    color: #000;
+    display: inline-block;
+    line-height: 14px;
+    font-size: 20px;
+    margin-left: 20px;
+}
+
 /* MEDIA QUERIES */
 .logoAbsolute{
     width: 316px;
