--- a/app/Resources/views/user/userFrontEnd.html.twig
+++ b/app/Resources/views/user/userFrontEnd.html.twig
@@ -13,15 +13,78 @@
 {% endblock %}
 
 {% block main %}
+    <link rel="stylesheet" href="{{ asset('vendors/tablesorter/dist/css/theme.default.min.css') }}" />
+    <link rel="stylesheet" href="{{ asset('vendors/tablesorter/dist/css/jquery.tablesorter.pager.min.css') }}" />
+
+    <script type="text/javascript" src="{{ asset('vendors/tablesorter/dist/js/jquery.tablesorter.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('vendors/tablesorter/dist/js/jquery.tablesorter.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('vendors/tablesorter/dist/js/jquery.tablesorter.widgets.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('vendors/tablesorter/dist/js/extras/jquery.tablesorter.pager.min.js') }}"></script>
+
     <script>
         jQuery(document).ready(function () {
-
+            $(".tablesorter")
+                    .tablesorter({
+                        widthFixed: true,
+                        widgets: ['zebra', 'filter']
+                    })
+                    .tablesorterPager({
+                        container: $("#pager"),
+                        size: 50
+                    });
         });
     </script>
 
     <div class="container mt-100 mb-40">
         <div class="row">
-
+            <div class="col-md-12">
+                <table class="tablesorter ">
+                    <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Email</th>
+                        <th>Prénom</th>
+                        <th>Nom</th>
+                        <th>Institut</th>
+                        <th>Activé</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for user in users %}
+                        <tr class="userLine" data-userId="{{ user.id }}">
+                            <td><a href="{{ path('user', {id:user.id }) }}">{{ user.id }}</a></td>
+                            <td><a href="{{ path('user', {id:user.id }) }}">{{ user.email }}</a></td>
+                            <td>{{ user.firstname }}</td>
+                            <td>{{ user.lastname }}</td>
+                            <td>{{ user.institut }}</td>
+                            <td>
+                                {% if user.enabled == 1 %}
+                                    oui
+                                {% else %}
+                                    non
+                                {% endif %}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                <div id="pager" class="pager">
+                    <form>
+                        <img src="{{ asset('vendors/tablesorter/dist/css/images/first.png') }}" class="first"/>
+                        <img src="{{ asset('vendors/tablesorter/dist/css/images/prev.png') }}" class="prev"/>
+                        <input type="text" class="pagedisplay"/>
+                        <img src="{{ asset('vendors/tablesorter/dist/css/images/next.png') }}" class="next"/>
+                        <img src="{{ asset('vendors/tablesorter/dist/css/images/last.png') }}" class="last"/>
+                        <select class="pagesize">
+                            <option value="10">10</option>
+                            <option value="20">20</option>
+                            <option value="30">30</option>
+                            <option value="40">40</option>
+                            <option value="all">All Rows</option>
+                        </select>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
