--- a/app/Resources/views/documents/docArray.html.twig
+++ b/app/Resources/views/documents/docArray.html.twig
@@ -27,7 +27,9 @@
                         <td data-text="{{ val[0].dateCrea|localizeddate('none', 'none', null, null, 'YMMddhhmm' ) }}">{{ val[0].dateCrea|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</td>
                         <td>
                             <a href="{{ val[0].url }}" class="btn btn-primary btn-xs btnDocOpen" download>Télécharger</a>
-                            {% if app.user.id == val[0].proprietaire.id or app.user.hasRole('ROLE_SUPER_ADMIN') %}
+                            {% if app.user.id == val[0].proprietaire.id
+                            or app.user.hasRole('ROLE_SUPER_ADMIN')
+                            or role == 'ens' %}
                                 <a class="btn btn-xs btn-danger deleteDoc">Supprimer</a>
                             {% endif %}
                         </td>
